# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_library", "psi_cc_test")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "kw_pir_client",
    srcs = ["kw_pir_client.cc"],
    hdrs = ["kw_pir_client.h"],
    linkopts = [
        "-ldl",
        "-lm",
    ],
    deps = [
        "@yacl//yacl/base:byte_container_view",
        "@yacl//yacl/base:exception",
    ],
)
