# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_library")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "kw_pir_server",
    srcs = ["kw_pir_server.cc"],
    hdrs = ["kw_pir_server.h"],
    linkopts = [
        "-ldl",
        "-lm",
    ],
    deps = [
        "//psi/kwpir/common:input_provider",
        "//psi/proto:kw_pir_server_service_cc_proto",
        "//psi/proto:pir_cc_proto",
        "@com_github_brpc_brpc//:brpc",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/utils:elapsed_timer",
    ],
)

psi_cc_library(
    name = "apsi_kw_pir_server",
    srcs = ["apsi_kw_pir_server.cc"],
    hdrs = ["apsi_kw_pir_server.h"],
    deps = [
        ":kw_pir_server",
        "//psi/apsi_wrapper/api:sender",
        "@com_github_brpc_brpc//:brpc",
        "@yacl//yacl/crypto/rand",
    ],
)

psi_cc_library(
    name = "kw_seal_pir_server",
    srcs = ["kw_seal_pir_server.cc"],
    hdrs = ["kw_seal_pir_server.h"],
    deps = [
        ":kw_pir_server",
        "@com_github_brpc_brpc//:brpc",
        "@yacl//yacl/crypto/rand",
    ],
)
